--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "loading-spinner": "^1.2.1",
     "puppeteer": "^21.1.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "yargs": "^17.7.2"
   }
 }
